--- a/pages/index.mdx
+++ b/pages/index.mdx
@@ -1,1 +1,11 @@
-歡迎，這邊是我的競程筆記。
+# 競技程式指南
+
+> 如果覺得我的文章有幫助，請到[github](https://github.com/rryh-tw/cp-tutorial-blog)上幫我按星星！
+
+## 如何開始
+若完全沒有相關經驗，可以先從`C++基礎語法`開始閱讀，有一點點基礎知識後，就可以開始解題目了！。<br />
+推薦大家從這份[題目單](https://codeforces.com/group/MWSDmqGsZm/contests)下手，裏面涵蓋最基礎的語法練習。<br />
+滑到最下面從`sheet #1 (Data type - Conditions) `開始解題目。<br />
+
+
+[待補]
